Update: update a product and add all filter options when the product is created